--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "base-64": "^1.0.0",
     "base64-arraybuffer": "^1.0.2",
     "date-fns": "^4.1.0",
-    "expo": "53.0.13",
+    "expo": "~53.0.23",
     "expo-blur": "~14.1.5",
     "expo-checkbox": "~4.1.4",
     "expo-constants": "~17.1.6",
@@ -39,21 +39,22 @@
     "expo-image-manipulator": "~13.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.5",
-    "expo-linking": "~7.1.5",
-    "expo-notifications": "~0.31.3",
+    "expo-linking": "~7.1.7",
+    "expo-notifications": "~0.31.4",
     "expo-print": "~14.1.4",
-    "expo-router": "~5.1.1",
-    "expo-secure-store": "~14.2.3",
+    "expo-router": "~5.1.7",
+    "expo-secure-store": "~14.2.4",
     "expo-sharing": "~13.1.5",
-    "expo-splash-screen": "~0.30.9",
-    "expo-sqlite": "~15.2.12",
+    "expo-splash-screen": "~0.30.10",
+    "expo-sqlite": "~15.2.14",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.9",
+    "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
+    "jest-expo": "~53.0.10",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.4",
+    "react-native": "0.79.5",
     "react-native-calendars": "^1.1310.0",
     "react-native-draggable-flatlist": "^4.0.2",
     "react-native-element-dropdown": "^2.12.4",
@@ -66,8 +67,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
-    "jest-expo": "~53.0.7"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
