tela de comissões pronta

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "base64-arraybuffer": "^1.0.2",
     "date-fns": "^4.1.0",
     "expo": "~54.0.0",
+    "expo-av": "~16.0.7",
     "expo-blur": "~15.0.7",
     "expo-checkbox": "~5.0.7",
     "expo-constants": "~18.0.9",
@@ -53,6 +54,7 @@
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.8",
     "jest-expo": "~54.0.12",
+    "lottie-react-native": "~7.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
