feat: configurar múltiplos ambientes (dev/prod) com Supabase separado
- Criar branch develop para desenvolvimento
- Configurar app.config.js para ambientes dinâmicos
- Adicionar scripts npm para dev/prod
- Configurar eas.json com perfis separados
- Criar sistema de variáveis de ambiente
- Adicionar documentação completa do workflow
- Instalar cross-env para compatibilidade multiplataforma

--- a/eas.json
+++ b/eas.json
@@ -7,20 +7,45 @@
     "development": {
       "developmentClient": true,
       "distribution": "internal",
+      "env": {
+        "EXPO_PUBLIC_ENVIRONMENT": "development"
+      },
       "android": {
         "buildType": "apk"
-      }
+      },
+      "channel": "development"
     },
     "preview": {
       "distribution": "internal",
+      "env": {
+        "EXPO_PUBLIC_ENVIRONMENT": "development"
+      },
       "android": {
         "buildType": "apk"
-      }
+      },
+      "channel": "preview"
+    },
+    "staging": {
+      "distribution": "internal",
+      "env": {
+        "EXPO_PUBLIC_ENVIRONMENT": "development"
+      },
+      "android": {
+        "buildType": "apk"
+      },
+      "ios": {
+        "simulator": false
+      },
+      "channel": "staging"
     },
     "production": {
+      "env": {
+        "EXPO_PUBLIC_ENVIRONMENT": "production"
+      },
       "android": {
         "buildType": "apk"
-      }
+      },
+      "channel": "production"
     }
   },
   "submit": {
