feat: implementar banco local SQLite + múltiplos ambientes
- Configurar SQLite local usando expo-sqlite
- Criar sistema de 3 ambientes: local, staging, produção
- Implementar DataService unificado para SQLite e Supabase
- Adicionar scripts de gerenciamento do banco local
- Criar componente de teste do banco de dados
- Atualizar documentação com novo workflow
- Remover dependências do Drizzle (incompatível com Windows/RN)

WORKFLOW FINAL:
- LOCAL: SQLite offline para desenvolvimento rápido
- STAGING: Supabase para testes em nuvem
- PRODUÇÃO: Supabase para ambiente real

--- a/eas.json
+++ b/eas.json
@@ -8,27 +8,17 @@
       "developmentClient": true,
       "distribution": "internal",
       "env": {
-        "EXPO_PUBLIC_ENVIRONMENT": "development"
+        "EXPO_PUBLIC_ENVIRONMENT": "local"
       },
       "android": {
         "buildType": "apk"
       },
-      "channel": "development"
-    },
-    "preview": {
-      "distribution": "internal",
-      "env": {
-        "EXPO_PUBLIC_ENVIRONMENT": "development"
-      },
-      "android": {
-        "buildType": "apk"
-      },
-      "channel": "preview"
+      "channel": "local"
     },
     "staging": {
       "distribution": "internal",
       "env": {
-        "EXPO_PUBLIC_ENVIRONMENT": "development"
+        "EXPO_PUBLIC_ENVIRONMENT": "staging"
       },
       "android": {
         "buildType": "apk"
