--- a/package.json
+++ b/package.json
@@ -4,24 +4,33 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "start:dev": "cross-env EXPO_PUBLIC_ENVIRONMENT=development expo start",
+    "start:local": "cross-env EXPO_PUBLIC_ENVIRONMENT=local expo start",
+    "start:staging": "cross-env EXPO_PUBLIC_ENVIRONMENT=staging expo start",
     "start:prod": "cross-env EXPO_PUBLIC_ENVIRONMENT=production expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
-    "android:dev": "cross-env EXPO_PUBLIC_ENVIRONMENT=development expo run:android",
+    "android:local": "cross-env EXPO_PUBLIC_ENVIRONMENT=local expo run:android",
+    "android:staging": "cross-env EXPO_PUBLIC_ENVIRONMENT=staging expo run:android",
     "android:prod": "cross-env EXPO_PUBLIC_ENVIRONMENT=production expo run:android",
     "ios": "expo run:ios",
-    "ios:dev": "cross-env EXPO_PUBLIC_ENVIRONMENT=development expo run:ios",
+    "ios:local": "cross-env EXPO_PUBLIC_ENVIRONMENT=local expo run:ios",
+    "ios:staging": "cross-env EXPO_PUBLIC_ENVIRONMENT=staging expo run:ios",
     "ios:prod": "cross-env EXPO_PUBLIC_ENVIRONMENT=production expo run:ios",
     "web": "expo start --web",
-    "web:dev": "cross-env EXPO_PUBLIC_ENVIRONMENT=development expo start --web",
+    "web:local": "cross-env EXPO_PUBLIC_ENVIRONMENT=local expo start --web",
+    "web:staging": "cross-env EXPO_PUBLIC_ENVIRONMENT=staging expo start --web",
     "web:prod": "cross-env EXPO_PUBLIC_ENVIRONMENT=production expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
     "build:dev": "eas build --profile development",
-    "build:preview": "eas build --profile preview",
+    "build:staging": "eas build --profile staging",
     "build:prod": "eas build --profile production",
-    "env:setup": "cp .env.example .env.development && cp .env.example .env.production"
+    "db:init": "node scripts/db-migrate.js init",
+    "db:reset": "node scripts/db-migrate.js reset",
+    "db:seed": "node scripts/db-migrate.js seed",
+    "db:sync": "node scripts/db-migrate.js sync-to-staging",
+    "db:test": "node scripts/db-migrate.js test",
+    "env:setup": "cp .env.example .env.development && cp .env.example .env.staging && cp .env.example .env.production"
   },
   "jest": {
     "preset": "jest-expo"
