--- a/.gitignore
+++ b/.gitignore
@@ -43,9 +43,14 @@ yarn-error.*
 # local env files
 .env
 .env.development
+.env.staging
 .env.production
 .env.local
 my-release-key.keystore
+
+# Local database
+*.db
+*.db-*
 
 # typescript
 *.tsbuildinfo
