--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "1.0.0",
   "scripts": {
     "build": "expo export",
+    "build:web": "expo export --platform web",
+    "deploy:vercel": "vercel dist --prod",
+    "deploy:netlify": "netlify deploy --prod --dir=dist",
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
