--- a/eas.json
+++ b/eas.json
@@ -17,6 +17,14 @@
         "buildType": "apk"
       }
     },
+    "preview-local": {
+      "distribution": "internal",
+      "android": {
+        "buildType": "apk",
+        "gradleCommand": ":app:assembleRelease"
+      },
+      "channel": "preview"
+    },
     "production": {
       "android": {
         "buildType": "apk"
