--- a/package.json
+++ b/package.json
@@ -47,34 +47,34 @@
     "base-64": "^1.0.0",
     "base64-arraybuffer": "^1.0.2",
     "date-fns": "^4.1.0",
-    "expo": "^54.0.17",
-    "expo-av": "~16.0.7",
-    "expo-blur": "~15.0.7",
-    "expo-checkbox": "~5.0.7",
+    "expo": "~54.0.27",
+    "expo-av": "~16.0.8",
+    "expo-blur": "~15.0.8",
+    "expo-checkbox": "~5.0.8",
     "expo-constants": "~18.0.10",
-    "expo-contacts": "~15.0.10",
-    "expo-dev-client": "~6.0.16",
-    "expo-device": "~8.0.9",
+    "expo-contacts": "~15.0.11",
+    "expo-dev-client": "~6.0.20",
+    "expo-device": "~8.0.10",
     "expo-file-system": "~19.0.16",
     "expo-font": "~14.0.8",
-    "expo-haptics": "~15.0.7",
-    "expo-image-manipulator": "~14.0.7",
-    "expo-image-picker": "~17.0.8",
-    "expo-linear-gradient": "~15.0.7",
-    "expo-linking": "~8.0.8",
-    "expo-notifications": "~0.32.12",
-    "expo-print": "~15.0.7",
-    "expo-router": "~6.0.13",
-    "expo-secure-store": "~15.0.7",
-    "expo-sharing": "~14.0.7",
-    "expo-splash-screen": "~31.0.10",
-    "expo-sqlite": "~16.0.8",
-    "expo-status-bar": "~3.0.8",
-    "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.8",
-    "expo-updates": "~29.0.12",
-    "expo-web-browser": "~15.0.8",
-    "jest-expo": "~54.0.13",
+    "expo-haptics": "~15.0.8",
+    "expo-image-manipulator": "~14.0.8",
+    "expo-image-picker": "~17.0.9",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-linking": "~8.0.10",
+    "expo-notifications": "~0.32.14",
+    "expo-print": "~15.0.8",
+    "expo-router": "~6.0.17",
+    "expo-secure-store": "~15.0.8",
+    "expo-sharing": "~14.0.8",
+    "expo-splash-screen": "~31.0.12",
+    "expo-sqlite": "~16.0.10",
+    "expo-status-bar": "~3.0.9",
+    "expo-symbols": "~1.0.8",
+    "expo-system-ui": "~6.0.9",
+    "expo-updates": "~29.0.14",
+    "expo-web-browser": "~15.0.10",
+    "jest-expo": "~54.0.14",
     "lottie-react-native": "~7.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
