feat: Sistema de rastreamento de atividade com heartbeat
- Adiciona colunas last_activity_at e dispositivo na tabela usuarios
- Implementa heartbeat no AuthContext (atualização a cada 1 minuto)
- Captura informações do dispositivo (modelo, SO, versão)
- Corrige exibição de timezone (UTC -> America/Sao_Paulo)
- Adiciona aba Atividades na conta-detalhes com:
  * Último acesso (horário local)
  * Usuários online (últimos 3 minutos)
  * Dispositivos ativos (últimos 30 dias)
- Remove função RPC que atualizava todos usuários
- Cria view v_user_activity para consultas facilitadas
- Adiciona date-fns-tz para formatação correta de timezone
- Inclui migrations SQL e scripts de debug
- APK de produção disponível via EAS Build

--- a/.easignore
+++ b/.easignore
@@ -31,6 +31,10 @@ Thumbs.db
 .idea/
 
 # IMPORTANTE: NÃO ignorar:
-# - android/ (pasta raiz - já commitada)
-# - assets/ (necessário para prebuild)
+# - android/ (pasta raiz - já commitada, não usamos CNG/Prebuild)
+# - ios/ (pasta raiz - já commitada, não usamos CNG/Prebuild)
+# - assets/ (necessário para builds)
 # - Arquivos de configuração
+
+# NOTA: O aviso do expo-doctor sobre CNG é esperado e pode ser ignorado.
+# Este projeto usa configuração nativa tradicional (não CNG/Prebuild).
