--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@lottiefiles/dotlottie-react": "^0.17.5",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/drawer": "^7.1.1",
@@ -47,6 +48,7 @@
     "base-64": "^1.0.0",
     "base64-arraybuffer": "^1.0.2",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "expo": "~54.0.27",
     "expo-av": "~16.0.8",
     "expo-blur": "~15.0.8",
@@ -72,10 +74,11 @@
     "expo-status-bar": "~3.0.9",
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
-    "expo-updates": "~29.0.14",
+    "expo-updates": "^29.0.15",
     "expo-web-browser": "~15.0.10",
     "jest-expo": "~54.0.14",
     "lottie-react-native": "~7.3.1",
+    "lz-string": "^1.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -100,6 +103,7 @@
     "@react-native-community/cli": "^18.0.0",
     "@types/base-64": "^1.0.2",
     "@types/jest": "^29.5.12",
+    "@types/lz-string": "^1.3.34",
     "@types/react": "~19.1.10",
     "@types/react-test-renderer": "^18.3.0",
     "babel-plugin-module-resolver": "^5.0.2",
