--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "expo-image-picker": "~17.0.9",
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.10",
+    "expo-media-library": "~18.2.1",
     "expo-notifications": "~0.32.14",
     "expo-print": "~15.0.8",
     "expo-router": "~6.0.17",
